Stop h1 being cut off on blog post titles

--- a/src/scss/components/_blog.scss
+++ b/src/scss/components/_blog.scss
@@ -39,6 +39,10 @@
             max-width: 100%;
         }
     }
+
+    h1 {
+        font-size: 1.99rem;
+    }
 }
 
 @media only screen 
